[gd_scene load_steps=9 format=3 uid="uid://bf8c3jgusmumy"]

[ext_resource type="PackedScene" uid="uid://dmm6vfpbo1n6f" path="res://Scenes/Prefabs/Player.tscn" id="1_2clqx"]
[ext_resource type="Script" path="res://Scenes/Transition.gd" id="1_3at2a"]
[ext_resource type="MeshLibrary" uid="uid://ci4a7nf6oifoy" path="res://Library/BlockLib.tres" id="2_fhhof"]
[ext_resource type="PackedScene" uid="uid://da7abfqdrue5x" path="res://Scenes/Prefabs/Door.tscn" id="3_jsow7"]
[ext_resource type="AudioStream" uid="uid://b8krtld76ajxh" path="res://Assets/Audio/level transition.mp3" id="5_a1mvx"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_323nq"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_xc12s"]
material = SubResource("StandardMaterial3D_323nq")
size = Vector2(5, 8)
orientation = 2

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_jntvo"]
data = PackedVector3Array(2.5, -3, 0, -2.5, -3, 0, 2.5, 3, 0, -2.5, -3, 0, -2.5, 3, 0, 2.5, 3, 0)

[node name="Transition" type="Node3D"]
script = ExtResource("1_3at2a")

[node name="Player" parent="." instance=ExtResource("1_2clqx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.54913, 0)
collision_layer = 5

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("2_fhhof")
cell_size = Vector3(1, 1, 1)
data = {
"cells": PackedInt32Array(65533, 1, 1441800, 65534, 1, 1441800, 65535, 1, 1441800, 0, 1, 1441800, 1, 1, 1441800, 2, 1, 1441800, 65533, 0, 1441800, 65533, 65519, 1441800, 65533, 65520, 1441800, 65533, 65521, 1441800, 65533, 65522, 1441800, 65533, 65523, 1441800, 65533, 65524, 1441800, 65533, 65525, 1441800, 65533, 65526, 1441800, 65533, 65527, 1441800, 65533, 65528, 1441800, 65533, 65529, 1441800, 65533, 65530, 1441800, 65533, 65531, 1441800, 65533, 65532, 1441800, 65533, 65533, 1441800, 65533, 65534, 1441800, 65533, 65535, 1441800, 65534, 65519, 1441800, 65534, 65520, 1441800, 65534, 65521, 1441800, 65534, 65522, 1441800, 65534, 65523, 1441800, 65534, 65524, 1441800, 65534, 65525, 1441800, 65534, 65526, 1441800, 65534, 65527, 1441800, 65534, 65528, 1441800, 65534, 65529, 1441800, 65534, 65530, 1441800, 65534, 65531, 1441800, 65534, 65532, 1441800, 65534, 65533, 1441800, 65534, 65534, 1441800, 65534, 65535, 1441800, 65534, 0, 1441800, 65535, 65519, 1441800, 65535, 65520, 1441800, 65535, 65521, 1441800, 65535, 65522, 1441800, 65535, 65523, 1441800, 65535, 65524, 1441800, 65535, 65525, 1441800, 65535, 65526, 1441800, 65535, 65527, 1441800, 65535, 65528, 1441800, 65535, 65529, 1441800, 65535, 65530, 1441800, 65535, 65531, 1441800, 65535, 65532, 1441800, 65535, 65533, 1441800, 65535, 65534, 1441800, 65535, 65535, 1441800, 65535, 0, 1441800, 0, 65519, 1441800, 0, 65520, 1441800, 0, 65521, 1441800, 0, 65522, 1441800, 0, 65523, 1441800, 0, 65524, 1441800, 0, 65525, 1441800, 0, 65526, 1441800, 0, 65527, 1441800, 0, 65528, 1441800, 0, 65529, 1441800, 0, 65530, 1441800, 0, 65531, 1441800, 0, 65532, 1441800, 0, 65533, 1441800, 0, 65534, 1441800, 0, 65535, 1441800, 0, 0, 1441800, 1, 65519, 1441800, 1, 65520, 1441800, 1, 65521, 1441800, 1, 65522, 1441800, 1, 65523, 1441800, 1, 65524, 1441800, 1, 65525, 1441800, 1, 65526, 1441800, 1, 65527, 1441800, 1, 65528, 1441800, 1, 65529, 1441800, 1, 65530, 1441800, 1, 65531, 1441800, 1, 65532, 1441800, 1, 65533, 1441800, 1, 65534, 1441800, 1, 65535, 1441800, 1, 0, 1441800, 2, 65519, 1441800, 2, 65520, 1441800, 2, 65521, 1441800, 2, 65522, 1441800, 2, 65523, 1441800, 2, 65524, 1441800, 2, 65525, 1441800, 2, 65526, 1441800, 2, 65527, 1441800, 2, 65528, 1441800, 2, 65529, 1441800, 2, 65530, 1441800, 2, 65531, 1441800, 2, 65532, 1441800, 2, 65533, 1441800, 2, 65534, 1441800, 2, 65535, 1441800, 2, 0, 1441800, 131069, 1, 1441800, 131070, 1, 1441800, 131071, 1, 1441800, 65536, 1, 1441800, 65537, 1, 1441800, 65538, 1, 1441800, 131069, 65521, 1441800, 131069, 65522, 1441800, 131069, 65523, 1441800, 131069, 65524, 1441800, 131069, 65525, 1441800, 131069, 65526, 1441800, 131069, 65527, 1441800, 131069, 65528, 1441800, 131069, 65529, 1441800, 131069, 65530, 1441800, 131069, 65531, 1441800, 131069, 65532, 1441800, 131069, 65533, 1441800, 131069, 65534, 1441800, 131069, 65535, 1441800, 131069, 0, 1441800, 131070, 65521, 1441800, 65538, 65521, 1441800, 65537, 65521, 1441800, 65538, 65522, 1441800, 65538, 65523, 1441800, 65538, 65524, 1441800, 65538, 65525, 1441800, 65538, 65526, 1441800, 65538, 65527, 1441800, 65538, 65528, 1441800, 65538, 65529, 1441800, 65538, 65530, 1441800, 65538, 65531, 1441800, 65538, 65532, 1441800, 65538, 65533, 1441800, 65538, 65534, 1441800, 65538, 65535, 1441800, 65538, 0, 1441800, 131074, 1, 1441800, 131073, 1, 1441800, 131072, 1, 1441800, 196607, 1, 1441800, 196606, 1, 1441800, 196605, 1, 1441800, 196605, 65521, 1441800, 196605, 65522, 1441800, 196605, 65523, 1441800, 196605, 65524, 1441800, 196605, 65525, 1441800, 196605, 65526, 1441800, 196605, 65527, 1441800, 196605, 65528, 1441800, 196605, 65529, 1441800, 196605, 65530, 1441800, 196605, 65531, 1441800, 196605, 65532, 1441800, 196605, 65533, 1441800, 196605, 65534, 1441800, 196605, 65535, 1441800, 196605, 0, 1441800, 196606, 65521, 1441800, 131073, 65521, 1441800, 131074, 65521, 1441800, 131074, 65522, 1441800, 131074, 65523, 1441800, 131074, 65524, 1441800, 131074, 65525, 1441800, 131074, 65526, 1441800, 131074, 65527, 1441800, 131074, 65528, 1441800, 131074, 65529, 1441800, 131074, 65530, 1441800, 131074, 65531, 1441800, 131074, 65532, 1441800, 131074, 65533, 1441800, 131074, 65534, 1441800, 131074, 65535, 1441800, 131074, 0, 1441800, 262141, 65521, 1441800, 262142, 65521, 1441800, 196609, 65521, 1441800, 196610, 65521, 1441800, 196610, 65522, 1441800, 196610, 65523, 1441800, 196610, 65524, 1441800, 196610, 65525, 1441800, 196610, 65526, 1441800, 196610, 65527, 1441800, 196610, 65528, 1441800, 196610, 65529, 1441800, 196610, 65530, 1441800, 196610, 65531, 1441800, 196610, 65532, 1441800, 196610, 65533, 1441800, 196610, 65534, 1441800, 196610, 65535, 1441800, 196610, 0, 1441800, 196610, 1, 1441800, 262141, 1, 1441800, 262142, 1, 1441800, 262143, 1, 1441800, 196608, 1, 1441800, 196609, 1, 1441800, 262141, 65522, 1441800, 262141, 65523, 1441800, 262141, 65524, 1441800, 262141, 65525, 1441800, 262141, 65526, 1441800, 262141, 65527, 1441800, 262141, 65528, 1441800, 262141, 65529, 1441800, 262141, 65530, 1441800, 262141, 65531, 1441800, 262141, 65532, 1441800, 262141, 65533, 1441800, 262141, 65534, 1441800, 262141, 65535, 1441800, 262141, 0, 1441800, 327677, 65521, 1441800, 327678, 65521, 1441800, 262145, 65521, 1441800, 262146, 65521, 1441800, 262146, 65522, 1441800, 262146, 65523, 1441800, 262146, 65524, 1441800, 262146, 65525, 1441800, 262146, 65526, 1441800, 262146, 65527, 1441800, 262146, 65528, 1441800, 262146, 65529, 1441800, 262146, 65530, 1441800, 262146, 65531, 1441800, 262146, 65532, 1441800, 262146, 65533, 1441800, 262146, 65534, 1441800, 262146, 65535, 1441800, 262146, 0, 1441800, 262146, 1, 1441800, 327677, 1, 1441800, 327678, 1, 1441800, 327679, 1, 1441800, 262144, 1, 1441800, 262145, 1, 1441800, 327677, 65522, 1441800, 327677, 65523, 1441800, 327677, 65524, 1441800, 327677, 65525, 1441800, 327677, 65526, 1441800, 327677, 65527, 1441800, 327677, 65528, 1441800, 327677, 65529, 1441800, 327677, 65530, 1441800, 327677, 65531, 1441800, 327677, 65532, 1441800, 327677, 65533, 1441800, 327677, 65534, 1441800, 327677, 65535, 1441800, 327677, 0, 1441800, 393213, 65521, 1441800, 393213, 65522, 1441800, 393213, 65523, 1441800, 393213, 65524, 1441800, 393213, 65525, 1441800, 393213, 65526, 1441800, 393213, 65527, 1441800, 393213, 65528, 1441800, 393213, 65529, 1441800, 393213, 65530, 1441800, 393213, 65531, 1441800, 393213, 65532, 1441800, 393213, 65533, 1441800, 393213, 65534, 1441800, 393213, 65535, 1441800, 393213, 0, 1441800, 393213, 1, 1441800, 393214, 65521, 1441800, 393214, 65522, 1441800, 393214, 65523, 1441800, 393214, 65524, 1441800, 393214, 65525, 1441800, 393214, 65526, 1441800, 393214, 65527, 1441800, 393214, 65528, 1441800, 393214, 65529, 1441800, 393214, 65530, 1441800, 393214, 65531, 1441800, 393214, 65532, 1441800, 393214, 65533, 1441800, 393214, 65534, 1441800, 393214, 65535, 1441800, 393214, 0, 1441800, 393214, 1, 1441800, 393215, 65521, 1441800, 393215, 65522, 1441800, 393215, 65523, 1441800, 393215, 65524, 1441800, 393215, 65525, 1441800, 393215, 65526, 1441800, 393215, 65527, 1441800, 393215, 65528, 1441800, 393215, 65529, 1441800, 393215, 65530, 1441800, 393215, 65531, 1441800, 393215, 65532, 1441800, 393215, 65533, 1441800, 393215, 65534, 1441800, 393215, 65535, 1441800, 393215, 0, 1441800, 393215, 1, 1441800, 327680, 65521, 1441800, 327680, 65522, 1441800, 327680, 65523, 1441800, 327680, 65524, 1441800, 327680, 65525, 1441800, 327680, 65526, 1441800, 327680, 65527, 1441800, 327680, 65528, 1441800, 327680, 65529, 1441800, 327680, 65530, 1441800, 327680, 65531, 1441800, 327680, 65532, 1441800, 327680, 65533, 1441800, 327680, 65534, 1441800, 327680, 65535, 1441800, 327680, 0, 1441800, 327680, 1, 1441800, 327681, 65521, 1441800, 327681, 65522, 1441800, 327681, 65523, 1441800, 327681, 65524, 1441800, 327681, 65525, 1441800, 327681, 65526, 1441800, 327681, 65527, 1441800, 327681, 65528, 1441800, 327681, 65529, 1441800, 327681, 65530, 1441800, 327681, 65531, 1441800, 327681, 65532, 1441800, 327681, 65533, 1441800, 327681, 65534, 1441800, 327681, 65535, 1441800, 327681, 0, 1441800, 327681, 1, 1441800, 327682, 65521, 1441800, 327682, 65522, 1441800, 327682, 65523, 1441800, 327682, 65524, 1441800, 327682, 65525, 1441800, 327682, 65526, 1441800, 327682, 65527, 1441800, 327682, 65528, 1441800, 327682, 65529, 1441800, 327682, 65530, 1441800, 327682, 65531, 1441800, 327682, 65532, 1441800, 327682, 65533, 1441800, 327682, 65534, 1441800, 327682, 65535, 1441800, 327682, 0, 1441800, 327682, 1, 1441800)
}
metadata/_editor_floor_ = Vector3(0, 5, 0)

[node name="LeDoor" parent="." instance=ExtResource("3_jsow7")]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 1.49627, -15.6691)

[node name="BackWall" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, -17)
mesh = SubResource("PlaneMesh_xc12s")

[node name="StaticBody3D" type="StaticBody3D" parent="BackWall"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="BackWall/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_jntvo")

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 1.6718)
spot_range = 9.81158
spot_angle = 49.1709

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_a1mvx")
volume_db = -15.0
autoplay = true

[connection signal="open_portal" from="." to="LeDoor" method="_open"]
[connection signal="area_entered" from="LeDoor" to="." method="_on_le_door_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
